# StellarBank

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: .env.example  README.md  package.json  tsconfig.json
backend/src/: server.ts
backend/src/config/: database.ts
backend/src/controllers/: auth.controller.ts
backend/src/middleware/: auth.middleware.ts  error.middleware.ts
backend/src/routes/: auth.routes.ts  compliance.routes.ts  transaction.routes.ts  user.routes.ts  wallet.routes.ts
backend/src/services/: auth.service.test.ts  auth.service.ts  notification.service.ts  soroban.service.ts  user.service.ts
backend/src/utils/: AppError.test.ts  AppError.ts  helper-16004.ts  helper-16218.ts  helper-20402.ts  helper-254.ts  helper-26892.ts  helper-28270.ts  helper-30225.ts  logger.ts
config/: config-1464.yml  config-15922.yml  config-30088.yml  config-3697.yml  config-9571.yml
contracts/: Cargo.toml  README.md
contracts/remittance-pool/: Cargo.toml
contracts/remittance-pool/src/: lib.rs  test.rs
contracts/scripts/: deploy-testnet.sh
contracts/tests/: test-11529.rs  test-13751.rs  test-14946.rs  test-15336.rs  test-15853.rs  test-25844.rs  test-26834.rs  test-30691.rs  test-31511.rs  test-8416.rs
docs/: API.md
docs/guides/: guide-10103.md  guide-10935.md  guide-134.md  guide-13511.md  guide-14966.md  guide-20371.md  guide-21344.md  guide-31441.md  guide-31880.md  guide-8039.md
frontend/: .env.example  README.md  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/lib/: api.ts  config.ts  util-1223.ts  util-20954.ts  util-26225.ts  util-27268.ts  util-31207.ts  (+2 more)
mobile/: README.md  package.json
(+15 files in other folders)
