[workspace]
resolver = "2"

# MVP scope: only remittance-pool is implemented. exchange-handler,
# compliance-oracle, and multi-sig-escrow are future work (see contracts/README.md)
# and are intentionally not workspace members until they have real code.
members = [
    "remittance-pool",
]

[workspace.dependencies]
soroban-sdk = "26.1.0"

# soroban-env-host's testutils generate ed25519 keys from a ChaCha20Rng via
# `SigningKey::generate`. ed25519-dalek 3.x moved to a newer CryptoRng trait
# that rand_chacha 0.3's ChaCha20Rng (built on rand_core 0.6) doesn't satisfy.
# Pin all three so the whole graph unifies on the compatible older set.
ed25519-dalek = "=2.2.0"
rand_core = "=0.6.4"
rand_chacha = "=0.3.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true